2007-10-09  Jim Evins  <evins@snaught.com>

	* src/merge-evolution.c:
		Create address book if it does not exist.  Also, be more robust about handling
		error conditions -- don't just assume GError has been set.

2007-10-08  Jim Evins  <evins@snaught.com>

	* libglabels/template.c:
	* libglabels/xml-template.c:
	* src/template-designer.c:
		Missed some symbols with libglabels API work.

2007-10-01  Jim Evins  <evins@snaught.com>

	* docs/libglabels/libglabels-decl-list.txt:
	* docs/libglabels/libglabels-docs.sgml:
	* docs/libglabels/libglabels-sections.txt:
	* docs/libglabels/libglabels-undocumented.txt:
	* docs/libglabels/tmpl/category.sgml:
	* docs/libglabels/tmpl/enums.sgml:
	* docs/libglabels/tmpl/init.sgml:
	* docs/libglabels/tmpl/libglabels-unused.sgml:
	* docs/libglabels/tmpl/paper.sgml:
	* docs/libglabels/tmpl/template-construction.sgml:
	* docs/libglabels/tmpl/template-db.sgml:
	* docs/libglabels/tmpl/template-misc.sgml:
	* docs/libglabels/tmpl/template-struct.sgml:
	* docs/libglabels/tmpl/template.sgml:
	* docs/libglabels/tmpl/xml-category.sgml:
	* docs/libglabels/tmpl/xml-template.sgml:
	* libglabels/category.h:
	* libglabels/init.c:
	* libglabels/libglabels-private.h:
	* libglabels/paper.h:
	* libglabels/template.c:
	* libglabels/template.h:
	* libglabels/xml-template.h:
		Basic documentation framework for libglabels updated.  This still needs some
		fleshing out.
	
2007-09-27  Jim Evins  <evins@snaught.com>

	* docs/libglabels/libglabels-decl-list.txt:
	* docs/libglabels/libglabels-docs.sgml:
	* docs/libglabels/libglabels-sections.txt:
	* docs/libglabels/libglabels-undocumented.txt:
	* docs/libglabels/tmpl/enums.sgml:
	* docs/libglabels/tmpl/init.sgml:
	* docs/libglabels/tmpl/libglabels-unused.sgml:
	* docs/libglabels/tmpl/paper.sgml:
	* docs/libglabels/tmpl/template.sgml:
	* docs/libglabels/tmpl/xml-paper.sgml:
	* docs/libglabels/tmpl/xml-template.sgml:
	* docs/libglabels/tmpl/xml.sgml:
	* libglabels/Makefile.am:
	* libglabels/category.c: