@@ -129,7 +129,8 @@ if test "x$enable_deprecations" = "xyes"; then
 -DGDK_DISABLE_DEPRECATED \
 -DGTK_DISABLE_DEPRECATED \
 -DGDK_PIXBUF_DISABLE_DEPRECATED \
--DGNOME_DISABLE_DEPRECATED"
+-DGNOME_DISABLE_DEPRECATED \
+-DLIBGLADE_DISABLE_DEPRECATED"
    AC_SUBST(DISABLE_DEPRECATED_CFLAGS)
 fi
 
